<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse.nebula.widgets.nattable</groupId>
	<artifactId>parent</artifactId>
	<version>2.0.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<url>https://projects.eclipse.org/projects/technology.nebula.nattable</url>
	<name>Nebula NatTable</name>

	<modules>
		<module>target-platform</module>

		<module>org.eclipse.nebula.widgets.nattable.core</module>
		<module>org.eclipse.nebula.widgets.nattable.core.test</module>
		<module>org.eclipse.nebula.widgets.nattable.core.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.core.source.feature</module>

		<module>org.eclipse.nebula.widgets.nattable.extension.e4</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.e4.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.e4.source.feature</module>

		<module>org.eclipse.nebula.widgets.nattable.extension.glazedlists</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.glazedlists.test</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.glazedlists.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.glazedlists.source.feature</module>

		<module>org.eclipse.nebula.widgets.nattable.extension.nebula</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.nebula.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.nebula.source.feature</module>

		<module>org.eclipse.nebula.widgets.nattable.extension.poi</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.poi.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.extension.poi.source.feature</module>

		<module>org.eclipse.nebula.widgets.nattable.updatesite</module>

		<module>org.eclipse.nebula.widgets.nattable.dataset</module>
		<module>org.eclipse.nebula.widgets.nattable.examples</module>
		<module>org.eclipse.nebula.widgets.nattable.examples.e4</module>
		<module>org.eclipse.nebula.widgets.nattable.examples.e4.feature</module>
		<module>org.eclipse.nebula.widgets.nattable.examples.e4.product</module>
		<module>org.eclipse.nebula.widgets.nattable.examples.e4.rcp.feature</module>
	</modules>

	<properties>
		<tycho-version>1.7.0</tycho-version>
        <cbi-version>1.1.8-SNAPSHOT</cbi-version>
        <nattable-version>2.0.0-SNAPSHOT</nattable-version>
		
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<jacoco.version>0.8.5</jacoco.version>
		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../org.eclipse.nebula.widgets.nattable.updatesite/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.surefire.reportsPath>${project.basedir}/../${project.artifactId}.test/target/surefire-reports/</sonar.surefire.reportsPath>
		<sonar.java.source>8</sonar.java.source>
		<sonar.exclusions>
			org.eclipse.nebula.widgets.nattable.core.test/**/*.java,
			org.eclipse.nebula.widgets.nattable.extension.glazedlists.test/**/*.java,
			org.eclipse.nebula.widgets.nattable.examples/**/*.java,
			org.eclipse.nebula.widgets.nattable.examples.e4/**/*.java,
			org.eclipse.nebula.widgets.nattable.dataset/**/*.java,
			**/.polyglot.*
		</sonar.exclusions>
	</properties>

  <pluginRepositories>
    <pluginRepository>
      <id>cbi</id>
      <url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
    </pluginRepository>
	<pluginRepository>
      <id>cbi-snapshots</id>
      <url>https://repo.eclipse.org/content/repositories/cbi-snapshots/</url>
      <snapshots>
      <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>org.eclipse.nebula.widgets.nattable</groupId>
							<artifactId>target-platform</artifactId>
							<version>${nattable-version}</version>
						</artifact>
					</target>
					<targetDefinitionIncludeSource>honor</targetDefinitionIncludeSource>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.3</version>
					<configuration>
						<tags>
							<tag>
								<name>noextend</name>
								<placement>a</placement>
								<head>noextend:</head>
							</tag>
							<tag>
								<name>noinstantiate</name>
								<placement>a</placement>
								<head>noinstantiate:</head>
							</tag>
							<tag>
								<name>noimplement</name>
								<placement>a</placement>
								<head>noimplement:</head>
							</tag>
						</tags>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

  <profiles>
    <profile>
      <id>sonar</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>

            <configuration>
              <sessionId>${project.artifactId}</sessionId>
            </configuration>

            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
		
    <profile>
      <id>sign</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.cbi.maven.plugins</groupId>
            <artifactId>eclipse-jarsigner-plugin</artifactId>
            <version>${cbi-version}</version>
            <executions>
              <execution>
                <id>sign</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
